--- a/theme/brb/views/lib/default.hbs
+++ b/theme/brb/views/lib/default.hbs
@@ -17,17 +17,18 @@
     {{#block "meta"}}
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="apple-mobile-web-app-capable" content="yes">
-        <meta name="apple-mobile-web-app-status-bar-style" content="#126dc4">
+        <meta name="apple-mobile-web-app-status-bar-style" content="#E4032E">
         <meta name="apple-mobile-web-app-title" content="{{theme.title}}">
-        <meta name="theme-color" content="#126dc4">
+        <meta name="theme-color" content="#E4032E">
         <meta name="application-name" content="{{theme.title}}">
-        <meta name="X-Recruiting" content="Das Entwickler-Team der HPI Schul-Cloud sucht nach Verstärkung! Schaut doch mal nach unseren Stellen: http://localhost:3100/community#jobs">
-        <link rel="mask-icon" href="/images/logo/safari-pinned-tab.svg" color="#126dc4">
+        <meta name="X-Recruiting" content="Das Entwickler-Team der Schul-Cloud sucht nach Verstärkung! Schaut doch mal nach unseren Stellen: http://localhost:3100/community#jobs">
+        <link rel="mask-icon" href="/images/logo/safari-pinned-tab.svg" color="#E4032E">
         <link rel="apple-touch-icon" href= "/images/logo/app-icon-512.png">
         <link rel="apple-touch-icon" sizes="120x120" href="/images/logo/app-icon-120.png">
         <link rel="apple-touch-icon" sizes="152x152" href="/images/logo/app-icon-152.png">
         <link rel="apple-touch-icon" sizes="167x167" href="/images/logo/app-icon-167.png">
         <link rel="apple-touch-icon" sizes="180x180" href="/images/logo/app-icon-180.png">
+        <link rel="icon" type="image/png" sizes="64x64" href="/images/logo/favicon-64.png">
         <link rel="icon" type="image/png" sizes="48x48" href="/images/logo/favicon-48.png">
         <link rel="icon" type="image/png" sizes="32x32" href="/images/logo/favicon-32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="/images/logo/favicon-16.png">
