add rel=noopener for security

--- a/views/lib/extended_footer.hbs
+++ b/views/lib/extended_footer.hbs
@@ -4,21 +4,21 @@
             <div  class="col-md-4">        
                 <h4>Kontakt</h4>
                 <ul>
-                    <li>Allgemeine Anfragen: <a href="mailto:info@schul-cloud.org" target="_blank">info@schul-cloud.org</a></li>
-                    <li>Inhalteanbieter: <a href="mailto:inhalte@schul-cloud.org" target="_blank">inhalte@schul-cloud.org</a></li>
-                    <li>Datenschutz: <a href="mailto:datenschutz@schul-cloud.org" target="_blank">datenschutz@schul-cloud.org</a></li>
-                    <li><a href="https://hpi.de/open-campus/registrierung/hpi-schul-cloud-newsletter/" target="_blank">Newsletter abonnieren</a></li>
+                    <li>Allgemeine Anfragen: <a href="mailto:info@schul-cloud.org" target="_blank" rel="noopener">info@schul-cloud.org</a></li>
+                    <li>Inhalteanbieter: <a href="mailto:inhalte@schul-cloud.org" target="_blank" rel="noopener">inhalte@schul-cloud.org</a></li>
+                    <li>Datenschutz: <a href="mailto:datenschutz@schul-cloud.org" target="_blank" rel="noopener">datenschutz@schul-cloud.org</a></li>
+                    <li><a href="https://hpi.de/open-campus/registrierung/hpi-schul-cloud-newsletter/" target="_blank" rel="noopener">Newsletter abonnieren</a></li>
                 </ul>
             </div>
             <div  class="col-md-4">        
                 <h4>Links</h4>
                 <ul>
                     <li><a href="/impressum" target="blank">Impressum</a></li>
-                    <li>Datenschutzerklärung: <a href="/impressum#data_security" target="blank">HPI</a> / <a href="https://schul-cloud-hpi.s3.hidrive.strato.com/Willkommenordner/Datenschutz/Datenschutzerklaerung-Muster-Schulen-Onlineeinwilligung.pdf" target="blank">Muster Schulen</a></li>
-                    <li><a href="/team" target="blank">Team</a></li>
-                    <li><a href="/partner" target="blank">Partner</a></li>
-                    <li><a href="/about" target="blank">Über das Projekt</a></li>
-                    <li><a href="https://github.com/schul-cloud/" target="_blank">GitHub</a></li>
+                    <li>Datenschutzerklärung: <a href="/impressum#data_security" target="blank" rel="noopener">HPI</a> / <a href="https://schul-cloud-hpi.s3.hidrive.strato.com/Willkommenordner/Datenschutz/Datenschutzerklaerung-Muster-Schulen-Onlineeinwilligung.pdf" target="blank" rel="noopener">Muster Schulen</a></li>
+                    <li><a href="/team" target="blank" rel="noopener">Team</a></li>
+                    <li><a href="/partner" target="blank" rel="noopener">Partner</a></li>
+                    <li><a href="/about" target="blank" rel="noopener">Über das Projekt</a></li>
+                    <li><a href="https://github.com/schul-cloud/" target="_blank" rel="noopener">GitHub</a></li>
                 </ul>
             </div>
             <div class="col-md-4">
