add button information for consent update page

--- a/views/firstLogin/sections/consent_updates.hbs
+++ b/views/firstLogin/sections/consent_updates.hbs
@@ -42,6 +42,9 @@
       </label>
       {{/if}}
     </div>
+    <p>Bitte nimm mit Klick auf »Gelesen« diese Informationen zur Kenntnis, um mit der Nutzung fortzufahren.</p>
+
+
   </div>
   {{/if}}
 
