--- a/views/courses/create-course.hbs
+++ b/views/courses/create-course.hbs
@@ -136,7 +136,7 @@
                     </div>
 
                     <span class="new-course-time-add" data-timesref="#timesContainer">
-                        <i class="fa fa-plus-circle fa-6"></i> Schulstundentermin im Stundenplan anlegen (optional)
+                        <i class="fa fa-plus-circle fa-6"></i> Schulstundentermin im Stundenplan anlegen - Optional
                     </span>
                     <table width="100%" cellpadding="5px" class="course-times-table">
                         <thead>
