--- a/views/courses/components/tasks.hbs
+++ b/views/courses/components/tasks.hbs
@@ -11,10 +11,10 @@
         <img src="/images/empty-states/assignments.svg" alt="Keine gestellten Aufgaben" class="image"/>
         {{#userHasPermission "COURSE_EDIT" }}
           <h2 class="h4">Erstelle die erste Aufgabe in deinem Kurs</h2>
-          <h3 class="h6 sub-title">
+          <p class="sub-title">
             Kursteilnehmer*innen können spielend leicht Aufgaben bis zu einem gesetzten Termin bearbeiten und Ergebnisse digital einreichen.
             Aufgaben können für einen ganzen Kurs oder ein einzelnes Thema gestellt werden.
-          </h3>
+          </p>
         {{else}}
           <h2 class="h4 text-muted">Es gibt noch keine gestellten Aufgaben in diesem Kurs.</h2>
         {{/userHasPermission}}
