--- a/views/courses/components/tools.hbs
+++ b/views/courses/components/tools.hbs
@@ -25,9 +25,9 @@
           <img src="/images/empty-states/tools.svg" alt="Keine hinzufügten Tools" class="image"/>
           {{#userHasPermission "TOOL_CREATE" }}
             <h2 class="h4">Füge dem Kurs Tools hinzu</h2>
-            <h3 class="h6 sub-title">
+            <p class="sub-title">
               Füge hier interaktive Tools, wie GeoGebra oder CodeOcean, einem Kurs hinzu.
-            </h3>
+            </p>
           {{else}}
             <h2 class="h4 text-muted">Es gibt noch keine Tools in diesem Kurs.</h2>
           {{/userHasPermission}}
