--- a/views/courses/components/topics.hbs
+++ b/views/courses/components/topics.hbs
@@ -99,10 +99,10 @@
           <img src="/images/empty-states/topics.svg" alt="Leeres Thema" class="image topic-image"/>
           {{#userHasPermission "COURSE_EDIT"}}
             <h2 class="h4">Erstelle das erste Thema in deinem Kurs</h2>
-            <h3 class="h6 sub-title">
+            <p class="sub-title">
               Füge Texte, Bilder, Videos und andere Materialien zu einem Thema hinzu.
               Ein Thema umfasst eine Unterrichtseinheit oder -stunde innerhalb deines Kurses.
-            </h3>
+            </p>
           {{else}}
             <h2 class="h4 text-muted">Es gibt noch keine Themen in diesem Kurs.</h2>
           {{/userHasPermission}}
