--- a/static/styles/homework/homework.scss
+++ b/static/styles/homework/homework.scss
@@ -24,6 +24,7 @@
     float: right;
     text-align: right;
     color: grey;
+    font-size: $font-size-xs;
   }
   &.has-stats{
     min-height: 165px;
