--- a/views/courses/create-course.hbs
+++ b/views/courses/create-course.hbs
@@ -234,18 +234,17 @@
                     <img class="image" src="/images/empty-states/add_people.svg" />
                 </div>
                 <div>
-                    <h2 class="h4">Geschafft!</h4>
+                    <h2 class="h4">Geschafft!</h2>
                         <h3 class="h5" class="text-muted">Was kannst du in einem Kurs machen?</h3>
                         <div class="course-features">
                             <h4 class="h6">Themen anlegen</h4>
-                            <h4 class="h6" class="text-muted">
+                            <p class="sub-text text-muted">
                                 Lege hier die Inhalte deines Unterrichts an.
-                            </h4>
-                            <h4 class="h6">Aufgaben stellen
-                                <h4 />
-                                <h4 class="text-muted h6">
-                                    Stelle deinen Kursteilnehmern Aufgaben und sieh dir ihre Abgaben an
-                                </h4>
+                            </p>
+                            <h4 class="h6">Aufgaben stellen</h4>
+                            <p class="sub-text text-muted">
+                                Stelle deinen Kursteilnehmern Aufgaben und sieh dir ihre Abgaben an
+                            </p>
                         </div>
                 </div>
             </div>
