--- a/views/topic/edit-topic.hbs
+++ b/views/topic/edit-topic.hbs
@@ -14,7 +14,7 @@
 
     {{#content "page"}}
         <div class="edtr-link-wrapper">
-            <a href="?edtr=true" class="edtr-link">
+            <a href="/courses/{{courseId}}/topics/{{topicId}}?edtr=true" target="_blank" class="edtr-link">
                 <button class="btn btn-primary edtr-btn">
                     Neuen Editor ausprobieren
                 </button>
