fix loggedout new logo

--- a/views/lib/header.hbs
+++ b/views/lib/header.hbs
@@ -2,7 +2,7 @@
     <div class="container">
         <nav class="navbar-light">
             <a id="title" class="pull-left" href="/">
-                <div class="cloud-logo"></div>{{theme.title}}</a>
+                <div class="cloud-logo"></div></a>
             {{#unless hideMenu}}
                 <ul class="nav navbar-nav pull-right">
                     <li class="nav-item hidden-sm-down">
