--- a/static/styles/authentication/home.scss
+++ b/static/styles/authentication/home.scss
@@ -36,7 +36,7 @@ body {
             }
             .cloud-logo {
                 display: inline-block;
-                width: 2.5rem;
+                width: 173px;
                 height: 2rem;
                 margin-top: -.25rem;
                 margin-bottom: -.5rem;
