--- a/static/styles/help/help.scss
+++ b/static/styles/help/help.scss
@@ -198,7 +198,7 @@ fieldset.switch_wrapper {
 // contact cards
 .contact-card {
   .icon-card__content {
-    background-color: $accentColor;
+    background-color: $primaryColor;
     color: $colorWhite;
 
     .icon-card__title:before {
@@ -244,7 +244,7 @@ fieldset.switch_wrapper {
 
 .eMail-card {
   .icon-card__content {
-    background: #e25617;
+    background: $primaryColor;
     color: $colorWhite;
 
     .icon-card__title:before {
