--- a/theme/brb/views/lib/extended_footer.hbs
+++ b/theme/brb/views/lib/extended_footer.hbs
@@ -4,7 +4,7 @@
 			<div class="col-md-4">
 				<h4>Kontakt</h4>
 				<ul>
-					<li>Allgemeine Anfragen: <a href="mailto:brandenburg@schul-cloud.org" target="_blank" rel="noopener">brandenburg@schul-cloud.org</a></li>
+					<li>Allgemein: <a href="mailto:brandenburg@schul-cloud.org" target="_blank" rel="noopener">brandenburg@schul-cloud.org</a></li>
 					<li>Inhalteanbieter: <a href="mailto:inhalte@schul-cloud.org" target="_blank" rel="noopener">inhalte@schul-cloud.org</a></li>
 					<li>Datenschutz: <a href="mailto:datenschutz@schul-cloud.org" target="_blank" rel="noopener">datenschutz@schul-cloud.org</a>
 					</li>
