--- a/theme/brb/views/authentication/home.hbs
+++ b/theme/brb/views/authentication/home.hbs
@@ -12,14 +12,14 @@
             <section class="card">
                 <div class="card-block">
                     <h4>Herzlich Willkommen bei der Schul-Cloud Brandenburg!</h4>
-                    <p>„Das Lernen mit digitalen Medien ist die Herausforderung mit der größten Dynamik. Dazu braucht es eine leistungsfähige digitale Infrastruktur. Zu den wichtigsten Vorhaben gehört die am Hasso-Plattner-Institut entwickelte Schul-Cloud. Sie soll die Schulen des Landes vernetzen, so dass Lehrkräfte, Schülerinnen und Schüler jederzeit und überall Zugang zu Lern- und Lehrmaterialien haben. Die professionelle zentrale Wartung für alle Schulen verringert deutlich den Verwaltungs- und Betreuungsaufwand. Wir versprechen uns von der Schul-Cloud einen deutlichen Schub in der digitalen Bildung und freuen uns auf den Start des Projekts.“ Dies sagte Bildungsministerin Britta Ernst bei der Eröffnungsveranstaltung am 2. Mai 2019.</p>
+                    <p>„Das Lernen mit digitalen Medien ist die Herausforderung mit der größten Dynamik. Dazu braucht es eine leistungsfähige, digitale Infrastruktur. Zu den wichtigsten Vorhaben gehört die am Hasso-Plattner-Institut entwickelte Schul-Cloud. Sie soll die Schulen des Landes vernetzen, so dass Lehrkräfte, Schülerinnen und Schüler jederzeit und überall Zugang zu Lern- und Lehrmaterialien haben. Die professionelle zentrale Wartung für alle Schulen verringert deutlich den Verwaltungs- und Betreuungsaufwand. Wir versprechen uns von der Schul-Cloud einen deutlichen Schub in der digitalen Bildung und freuen uns auf den Start des Projekts.“ - Bildungsministerin Britta Ernst bei der Eröffnungsveranstaltung am 2. Mai 2019.</p>
 					<p>Das Land Brandenburg pilotiert die vom Hasso-Plattner-Institut entwickelte Schul-Cloud mit zunächst 51 Schulen. Hinzu kommen drei Schulen aus dem HPI/MINT-EC-Projekt. Die Pilotierung erfolgt in den Schuljahren 2019/2020 und 2020/2021.</p>
 					<h4>Sie setzt besondere Schwerpunkte bei der</h4>
 					<ul>
-						<li>der Verzahnung der Schul-Cloud mit dem im MBJS entwickelten Online-Schulverwaltungsprogramms weBBschule,</li>
-						<li>der Bezugnahme auf den in Brandenburg gültigen Rahmenlehrplan 1-10 (einschl. der Nutzung von bereits existierenden offenen Schnittstellen zum RLP online),</li>
-						<li>der systematischen Einbeziehung von freien Bildungsmedien (Open Educational Resources (OER) und</li>
-						<li>der Einbindung von Fortbildungsmodulen (Blended-Learning).</li>
+						<li>Verzahnung der Schul-Cloud mit dem im MBJS entwickelten Online-Schulverwaltungsprogramms weBBschule,</li>
+						<li>Bezugnahme auf den in Brandenburg gültigen Rahmenlehrplan 1-10 (einschl. der Nutzung von bereits existierenden offenen Schnittstellen zum RLP online),</li>
+						<li>systematischen Einbeziehung von freien Bildungsmedien (Open Educational Resources (OER)) und</li>
+						<li>Einbindung von Fortbildungsmodulen (Blended-Learning).</li>
 					</ul>
 					<p>Grundsätzliche Alleinstellungsmerkmale der HPI-Entwicklung sind ihre Prozessorientierung, Skalierbarkeit und damit zukunftsgerichtete Nachhaltigkeit.</p>
 					<h4>Die HPI Schul-Cloud-Entwicklung zeichnet sich aus durch</h4>
@@ -33,7 +33,7 @@
 					</ul>
 					<br>
 					<p>
-						<img src="https://schul-cloud-hpi.s3.hidrive.strato.com/brb/images/HPI_Schul_Cloud_Brandenburg_Schueler_2019.jpg" alt="Die HPI Schul-Cloud in Brandenburg" />
+						<img src="https://schul-cloud-hpi.s3.hidrive.strato.com/brb/images/HPI_Schul_Cloud_Brandenburg_Schueler_2019.jpg" alt="Schüler sitzen zusammen und nutzen die Schul-Cloud Brandenburg auf ihren mobilen Endgeräten." />
 						Mehr Informationen: <a href="https://schul-cloud-hpi.s3.hidrive.strato.com/Dokumente/Beschreibung-der-HPI-Schul-Cloud.pdf" target="_blank" rel="noopener">Kurzbeschreibung "Die HPI Schul-Cloud" (.pdf)</a>
 					</p>
 
