--- a/views/community/community.hbs
+++ b/views/community/community.hbs
@@ -8,9 +8,9 @@
             Alle 316 Schulen aus dem MINT-EC-Schulnetzwerk können sich für die Teilnahme am Projekt „HPI Schul-Cloud“ anmelden. Um Pilotschule zu werden loggen Sie sich bitte mit Ihrem Profil auf der Website des MINT-EC ein und füllen Sie das Formular aus.
             <a href="https://www.mint-ec.de/schulnetzwerk/hpi-schul-cloud/mitmachen/" target="_blank">Zur Anmeldung</a>
             <li><b>Die nächsten Starttermine:</b></li>
-            <li>2. Schulhalbjahr 2018/2019</li>
             <li>1. Schulhalbjahr 2019/2020</li>
             <li>2. Schulhalbjahr 2019/2020</li>
+            <li>1. Schulhalbjahr 2020/2021</li>
         </ul>
     </p>
     <p>
@@ -42,15 +42,22 @@
     <br />
 
     <h3>Landesinitiativen</h3>
-    <p>Seit Februar 2018 kooperiert das Projekt HPI Schul-Cloud mit der niedersächsischen Bildungscloud der
-    <a href="http://www.n-21.de" target="_blank">Landesinitiative n-21</a>. Die Projektschulen der Niedersächsischen Bildungscloud werden an die HPI Schul-Cloud angebunden und können diese
+	<h5>Niedersächsische Bildungscloud</h5>
+    <p>Seit Februar 2018 kooperiert das Projekt HPI Schul-Cloud mit der niedersächsischen Bildungscloud der <a target='_blank' rel='noopener' href='http://www.n-21.de'>Landesinitiative n-21</a>. 
+	Die Projektschulen der Niedersächsischen Bildungscloud werden an die HPI Schul-Cloud angebunden und können diese
         mit einer individualisierten Oberfläche nutzen. Die Kooperation ermöglicht einen engen Erfahrungsaustausch, von dem
         beide Seiten profitieren werden. Zudem wird erprobt, wie die HPI Schul-Cloud länderspezifisch und schulformübergreifend
         effizient eingesetzt werden kann. Weitere Informationen zu der Kooperation mit der niedersächsischen Bildungscloud
-        können Sie <a href="https://hpi.de/pressemitteilungen/2018/digitalisierung-niedersaechsische-bildungscloud-und-bundesweite-schul-cloud-starten-kooperation-auf-der-didacta.html" target="_blank">hier</a> einsehen.
-        Wenn Sie als Landesinitiative Interesse daran haben, mit der HPI Schul-Cloud zu kooperieren, wenden Sie sich gerne
+        können Sie hier einsehen: <a target='_blank' rel='noopener' href='https://hpi.de/pressemitteilungen/2018/digitalisierung-niedersaechsische-bildungscloud-und-bundesweite-schul-cloud-starten-kooperation-auf-der-didacta.html'>Pressemitteilung vom Februar 2018</a>
+    </p>    
+	<h5>Schul-Cloud Brandenburg</h5>
+	<p>
+	Seit dem Frühjahr 2019 kooperieren wir neben dem Land Niedersachsen auch mit Brandenburg. Vom 1. August 2019 bis zum 31. Juli 2021 läuft das Pilotprojekt, in dem 51 Schulen aus dem Programm "medienfit" die HPI Schul-Cloud nutzen und in ihren Schulalltag einbeziehen. Drei weitere brandenburgische Schulen, die gleichzeitig im Programm "medienfit" und im MINT-EC-Netzwerk sind, werden ebenfalls einbezogen. Für die Schul-Cloud Brandenburg wird wie in Niedersachsen eine individualisierte Oberfläche zur Verfügung gestellt. Die Steuerung des Vorhabens liegt beim MBJS, die Projektkoordinierung  bei der DigitalAgentur Brandenburg (DABB) unter dem Dach der ILB. Die technische Projektleitung übernimmt das HPI, die pädagogische Leitung das Landesinstitut für Schule und Medien (LISUM).
+	</p>
+	<p>
+		Wenn Sie als Landesinitiative Interesse daran haben, mit der HPI Schul-Cloud zu kooperieren, wenden Sie sich gerne
         an <a href="mailto:schul-cloud@hpi.de">schul-cloud@hpi.de</a>.
-    </p>
+	</p>
     <br />
 
     <h3>Inhalteanbieter</h3>
@@ -68,8 +75,6 @@
     <h4>Stellenausschreibungen im Projekt Schul-Cloud</h4>
     <p>
         Du möchtest gerne Mitglied in unserem HPI Schul-Cloud Team werden? Wir suchen:
-        <br />
-        <a href="https://hpi.de/das-hpi/organisation/jobs/aktuelle-jobs/internettechnologien/frontend-web-developer-mwd-im-projekt-hpi-schul-cloud.html" rel="noopener" target="_blank">Frontend Web Developer (m/w/d) im Projekt HPI Schul-Cloud</a>
         <br />
         <a href="https://hpi.de/das-hpi/organisation/jobs/aktuelle-jobs/internettechnologien/web-developer-im-projekt-schul-cloud.html" rel="noopener" target="_blank">Web Developer (m/w/d) im Projekt HPI Schul-Cloud</a>
 		
