--- a/views/about/about.hbs
+++ b/views/about/about.hbs
@@ -11,7 +11,7 @@
     <p>Das Projekt HPI Schul-Cloud ist im September 2016 in die 5-monatige Konzeptphase gestartet. Ab Mai 2017 startete die
         Pilotphase, in der zunächst 27 MINT-EC-Schulen die HPI Schul-Cloud testen und nutzen konnten. Im Mai 2018 begann die Roll-Out-Phase,
         in der die Nutzung der HPI Schul-Cloud stufenweise auf alle über 300 Schulen aus dem nationalen
-        Excellence-Schulnetzwerks MINT-EC ausgeweitet wird. Zunächst wurden 40 weitere MINT-EC Schulen an die HPI Schul-Cloud angebunden, sodass derzeit 67 Pilotschulen die HPI Schul-Cloud testen können (Stand Juli 2018). <br/> Auch unser <a
+        Excellence-Schulnetzwerks MINT-EC ausgeweitet wird. Derzeit können 100 MINT-EC Pilotschulen die HPI Schul-Cloud testen (Stand Mai 2019). <br/> Auch unser <a
                 href="https://schul-cloud.org/team">Team</a> wächst stetig!</p>
 
     <div class="section-partner">
@@ -141,8 +141,8 @@
         </div>
     </div>
     <br/>
-    <p>Im Rahmen des Projekts wird die HPI Schul-Cloud durch drei Arbeitsgruppen des MINT-EC-Themenclusters HPI Schul-Cloud
-        unterstützt: AG IT, Schulleitung & Unterricht.<a href="https://www.mint-ec.de/fileadmin/content/schulcloud/Info_Kit.pdf" target="_blank">Hier</a> finden Sie die Ergebnisse aus den verschiedenen Arbeitsgruppen der Pilotphase, die in Form eines Info Kits zusammengefasst sind.</p><br/>
+    <p>Im Rahmen des Projekts wird die HPI Schul-Cloud durch vier Arbeitsgruppen des MINT-EC-Themenclusters HPI Schul-Cloud
+        unterstützt: AG IT, Schulleitung, Unterricht und regionale Netzwerke.<a href="https://www.mint-ec.de/fileadmin/content/schulcloud/Info_Kit.pdf" target="_blank">Hier</a> finden Sie die Ergebnisse aus den verschiedenen Arbeitsgruppen der Pilotphase, die in Form eines Info Kits zusammengefasst sind.</p><br/>
     <p>Wir möchten uns ganz herzlich für die tolle Zusammenarbeit und das große Engagement unserer Pilotschullehrkräfte
         bedanken!</p>
     
