remove job and replace partner images with s3

--- a/views/authentication/home.hbs
+++ b/views/authentication/home.hbs
@@ -126,7 +126,6 @@
                             <div class="form-group">
                                 Du möchtest gerne Mitglied in unserem HPI Schul-Cloud Team werden? Wir suchen:
                             </div>
-                            <a href="https://hpi.de/das-hpi/organisation/jobs/aktuelle-jobs/internettechnologien/frontend-web-developer-mwd-im-projekt-hpi-schul-cloud.html" rel="noopener" target="_blank">Frontend Web Developer</a></br>
                             <a href="https://hpi.de/das-hpi/organisation/jobs/aktuelle-jobs/internettechnologien/web-developer-im-projekt-schul-cloud.html" rel="noopener" target="_blank">Web Developer</a>
                         </div>
                     </section>
@@ -161,21 +160,21 @@
                     </section>
 
                     <section id="partner" class="card">
-                        <div class="card-block">
-                            <h4 class="card-title">Projektdurchführung</h4>
-                            <div class="card-text partner-img">
-                                <a href="https://hpi.de" target="_blank">
-                                    <img src="/images/partner/hpi-logo.jpg" alt="Logo HPI" class="img-fluid" style="padding: 20px;">
-                                </a>
-                                <a href="https://www.mint-ec.de/" target="_blank">
-                                    <img src="/images/partner/mintec-logo.jpg" alt="Logo MINT-EC" class="img-fluid">
-                                </a>
-                                <a href="https://www.bmbf.de/" target="_blank">
-                                    <img src="/images/partner/bmbf-logo.jpg" alt="Logo BMBF" class="img-fluid">
-                                </a>
-                            </div>
-                        </div>
-                    </section>
+						<div class="card-block">
+							<h4 class="card-title">Projektdurchführung</h4>
+							<div class="card-text partner-img">
+								<a href="https://hpi.de" target="_blank">
+									<img src="https://schul-cloud-hpi.s3.hidrive.strato.com/images/partner/hpi-logo.jpg" alt="Logo HPI" class="img-fluid" style="padding: 20px;">
+								</a>
+								<a href="https://www.mint-ec.de/" target="_blank">
+									<img src="https://schul-cloud-hpi.s3.hidrive.strato.com/images/partner/mintec-logo.jpg" alt="Logo MINT-EC" class="img-fluid">
+								</a>
+								<a href="https://www.bmbf.de/" target="_blank">
+									<img src="https://schul-cloud-hpi.s3.hidrive.strato.com/images/partner/bmbf-logo.jpg" alt="Logo BMBF" class="img-fluid">
+								</a>
+							</div>
+						</div>
+					</section>
                 </aside>
             </div>
         </div>
