add partner images and styling

--- a/static/styles/authentication/home.scss
+++ b/static/styles/authentication/home.scss
@@ -168,15 +168,14 @@ body {
     }
 }
 
+.partner-img {
+	img {
+		padding: 5px 20px;
+	}
+}
+
 @media (max-width: 1024px) {
     .intro-trigger {
         display: none;
   }
-      
-    .partner-img {
-        position: relative;
-        left: 50%;
-        transform: translate(-50%, 0);
-        width: 70%
-    }
 }
