noopener security and modify link in hsc

--- a/views/authentication/home.hbs
+++ b/views/authentication/home.hbs
@@ -163,13 +163,13 @@
 						<div class="card-block">
 							<h4 class="card-title">Projektdurchführung</h4>
 							<div class="card-text partner-img">
-								<a href="https://hpi.de" target="_blank">
+								<a href="https://hpi.de/open-campus/hpi-initiativen/schul-cloud.html" target="_blank" rel="noopener">
 									<img src="https://schul-cloud-hpi.s3.hidrive.strato.com/images/partner/hpi-logo.jpg" alt="Logo HPI" class="img-fluid" style="padding: 20px;">
 								</a>
-								<a href="https://www.mint-ec.de/" target="_blank">
+								<a href="https://www.mint-ec.de/" target="_blank" rel="noopener">
 									<img src="https://schul-cloud-hpi.s3.hidrive.strato.com/images/partner/mintec-logo.jpg" alt="Logo MINT-EC" class="img-fluid">
 								</a>
-								<a href="https://www.bmbf.de/" target="_blank">
+								<a href="https://www.bmbf.de/" target="_blank" rel="noopener">
 									<img src="https://schul-cloud-hpi.s3.hidrive.strato.com/images/partner/bmbf-logo.jpg" alt="Logo BMBF" class="img-fluid">
 								</a>
 							</div>
