remove inline style

--- a/views/authentication/home.hbs
+++ b/views/authentication/home.hbs
@@ -164,7 +164,7 @@
 							<h4 class="card-title">Projektdurchführung</h4>
 							<div class="card-text partner-img">
 								<a href="https://hpi.de/open-campus/hpi-initiativen/schul-cloud.html" target="_blank" rel="noopener">
-									<img src="https://schul-cloud-hpi.s3.hidrive.strato.com/images/partner/hpi-logo.jpg" alt="Logo HPI" class="img-fluid" style="padding: 20px;">
+									<img src="https://schul-cloud-hpi.s3.hidrive.strato.com/images/partner/hpi-logo.jpg" alt="Logo HPI" class="img-fluid">
 								</a>
 								<a href="https://www.mint-ec.de/" target="_blank" rel="noopener">
 									<img src="https://schul-cloud-hpi.s3.hidrive.strato.com/images/partner/mintec-logo.jpg" alt="Logo MINT-EC" class="img-fluid">
